[package]
name = "map_fix_protos"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fo_map_format = { git = "https://github.com/fonline-rust/fo_map_format.git" }
fo_proto_format = { git = "https://github.com/fonline-rust/fo_proto_format.git" }
nom_prelude = { git = "https://github.com/fonline-rust/format_extras.git" }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"
debug = 0
codegen-units = 1

[profile.dev]
lto = false
opt-level = 0
debug = 2
